# jellydrop

./: README.md  package.json  pnpm-lock.yaml
scraper/: .env  README.md  pyproject.toml
scraper/('./profile',)/: Local State  SingletonCookie  SingletonLock  SingletonSocket
scraper/profile/: Local State  SingletonCookie  SingletonLock  SingletonSocket  VariationsSeedV1
scraper/profile/Default/: .com.google.Chrome.1CqF8p  .com.google.Chrome.2rTRNH  .com.google.Chrome.3UB3fe  .com.google.Chrome.3cLgXp  .com.google.Chrome.83COdt  .com.google.Chrome.8VR2Co  .com.google.Chrome.EuMl2M  .com.google.Chrome.HJf8f2  .com.google.Chrome.IHiYiu  .com.google.Chrome.RB04Yg  .com.google.Chrome.ZeWQHI  .com.google.Chrome.c9W8fM  .com.google.Chrome.gmM6Of  .com.google.Chrome.h4TROJ  .com.google.Chrome.iSReWu  .com.google.Chrome.kj282S  .com.google.Chrome.nMsl9i  BrowsingTopicsState  Cookies  DIPS  DIPS-shm  DIPS-wal  Favicons  Favicons-journal  History  History-journal  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Reporting and NEL-journal  Top Sites  TransportSecurity  Visited Links  Web Data
scraper/profile/GrShaderCache/: data_0  data_1  index
scraper/profile/GraphiteDawnCache/: data_1  index
scraper/profile/Safe Browsing/: ChromeExtMalware.store  UrlBilling.store  UrlBilling.store.4_13389666104575656  UrlCsdAllowlist.store  UrlCsdDownloadAllowlist.store  UrlHighConfidenceAllowlist.store  UrlMalBin.store  UrlMalBin.store.4_13389666104580173  UrlMalware.store  UrlMalware.store.4_13389666104546393  UrlSoceng.store  UrlSuspiciousSite.store  (+4 more)
(+8144 files in other folders)
