[project]
name = "scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Lea Lewis",email = "77940920+le2310al@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "nodriver==0.44",
    "psycopg2",
    "supabase",
    "dotenv (>=0.9.9,<0.10.0)",
]

[tool.poetry]
packages = [{include = "scraper", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
